# PythonProjects

./: README.md
cinemabot/: README.md  main.py
cinemabot/cinemabot/: bot.py  database.py  utils.py
compgraph/: README.md  pyproject.toml
compgraph/compgraph/: __init__.py  algorithms.py  cli.py  exception.py  graph.py
compgraph/compgraph/operations/: __init__.py  base.py  joiners.py  mappers.py  mappers_misc.py  operation_impl.py  reducers.py  reducers_misc.py
compgraph/tests/: test_cli.py  test_graph.py  test_operations.py
compgraph/tests/correctness/: test_algorithms.py  test_operations.py
vm/: README.md  cases.py  test_public.py  vm.py  vm_runner.py
