[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compgraph"
version = "1.1"
readme = "LIB_README.md"
authors = [
    { name = "Ivan", email = "ivan.gorobets.11@gmail.com" },
]
requires-python = ">=3.10"
description = "Computing graph library for solving 4 tasks, learn more in {readme}"
dependencies = [
    "Kaleido==0.0.3.post1"
]
[project.optional-dependencies]
examples = [
    "Click"
]
[tool.setuptools]
packages = [
    "compgraph"
]
[project.scripts]
compgraph = "compgraph.cli:cli"